no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 9b6600c59eacfd9a92998e6be39cc7afe01d9daa

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-hu/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-hu/strings.xml
@@ -2948,6 +2948,45 @@ string
 !
 -
 -
+Text
+link
+to
+learn
+more
+about
+permission
+requests
+on
+the
+add
+-
+on
+permissions
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_learn_more
+"
+>
+Tov
+bbi
+tudnival
+k
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 a
