--- a/mobile/android/fenix/app/src/main/res/values-fur/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-fur/strings.xml
@@ -287,6 +287,46 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+Navigazion
+privade
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -3825,6 +3865,45 @@ Disativ
 t
 pal
 moment
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
+"
+>
+Nissune
+estension
+ative
 <
 /
 string
