--- a/mobile/android/fenix/app/src/main/res/values-hu/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-hu/strings.xml
@@ -300,6 +300,50 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+Priv
+t
+b
+ng
+sz
+s
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -4016,6 +4060,48 @@ string
 !
 -
 -
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
+"
+>
+Nincs
+kieg
+sz
+t
+enged
+lyezve
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
@@ -7452,12 +7538,82 @@ name
 "
 search_engine_icon_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 %
 s
 keres
 szolg
 ltat
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Search
+engine
+icon
+.
+The
+parameter
+is
+the
+search
+engine
+name
+(
+for
+example
+:
+DuckDuckGo
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+search_engine_icon_content_description_1
+"
+>
+Keres
+szolg
+ltat
+s
+:
+%
 s
 <
 /
@@ -9416,13 +9572,6 @@ name
 "
 onboarding_add_on_explore_more_extensions_2
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Fedezzen
 fel
@@ -9463,13 +9612,6 @@ name
 =
 "
 onboarding_add_on_start_browsing_button_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 B
@@ -9939,6 +10081,176 @@ d
 a
 mobilwebhez
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+number
+of
+reviews
+for
+an
+add
+-
+on
+.
+The
+parameter
+is
+for
+the
+formatted
+number
+of
+reviews
+e
+.
+g
+.
+"
+1
+234
+"
+"
+12
+345
+"
+"
+123
+456
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_reviews_label
+"
+>
+rt
+kel
+sek
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+-
+on
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_icon_content_description
+"
+>
+Kieg
+sz
+t
+ikonja
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+Kieg
+sz
+t
+ikon
+hozz
+ad
+sa
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+%
+1
+s
+csillagra
+rt
+kelve
+az
+5
+-
+b
+l
 <
 /
 string
@@ -22000,6 +22312,49 @@ to
 delete
 multiple
 items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
+"
+>
+Biztos
+hogy
+t
+rli
+a
+kiv
+lasztott
+elemeket
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
 including
 folders
 .
@@ -22124,6 +22479,20 @@ name
 =
 "
 bookmark_saved_snackbar
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 K
@@ -23143,13 +23512,6 @@ name
 "
 bookmark_delete_multiple_items
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Elemek
 t
@@ -23259,6 +23621,76 @@ mappa
 hozz
 ad
 sa
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_bookmark_content_description
+"
+>
+K
+nyvjelz
+t
+rl
+se
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+folder
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folder_content_description
+"
+>
+Mappa
+t
+rl
+se
 <
 /
 string
@@ -23609,13 +24041,6 @@ name
 =
 "
 bookmark_select_folder_new_folder_button_title
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 j
@@ -27815,6 +28240,20 @@ name
 "
 snackbar_message_bookmarks_saved
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 K
 nyvjelz
@@ -27866,13 +28305,6 @@ name
 =
 "
 snackbar_message_bookmarks_saved_in
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 A
