--- a/mobile/android/fenix/app/src/main/res/values-si/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-si/strings.xml
@@ -1434,6 +1434,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 -
 .
@@ -1471,6 +1485,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -2661,6 +2689,65 @@ name
 browser_menu_manage_extensions
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+%
+1
+s
 <
 /
 string
@@ -4640,6 +4727,20 @@ name
 "
 search_scan_button
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -5026,6 +5127,13 @@ ignore
 "
 UnusedResources
 "
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 %
 s
@@ -5070,6 +5178,13 @@ name
 =
 "
 onboarding_home_screen_jump_back_contextual_hint_2
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 >
 .
@@ -5381,232 +5496,6 @@ string
 !
 -
 -
-Notification
-pre
--
-permission
-dialog
--
--
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-title
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_title
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-%
-s
-<
-/
-string
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-description
-with
-rationale
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-%
-s
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-request
-notification
-permission
-on
-the
-device
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_positive_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-not
-request
-notification
-permission
-on
-the
-device
-and
-dismiss
-the
-dialog
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_negative_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Juno
 first
 user
@@ -5651,6 +5540,13 @@ name
 =
 "
 juno_onboarding_privacy_notice_text
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 <
@@ -5718,121 +5614,6 @@ juno_onboarding_default_browser_description_nimbus_3
 "
 >
 .
-<
-/
-string
->
-<
-!
--
--
-Description
-for
-set
-firefox
-as
-default
-browser
-screen
-used
-by
-Nimbus
-experiments
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_nimbus_2
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-.
-\
-n
-\
-n
-.
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-link
-to
-the
-privacy
-notice
-webpage
-for
-set
-as
-firefox
-default
-browser
-screen
-.
-This
-is
-part
-of
-the
-string
-with
-the
-key
-"
-juno_onboarding_default_browser_description
-"
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_link_text
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
 <
 /
 string
@@ -5938,68 +5719,6 @@ name
 juno_onboarding_sign_in_title_2
 "
 >
-<
-/
-string
->
-<
-!
--
--
-Description
-for
-sign
-in
-to
-sync
-screen
-.
-Nimbus
-experiments
-do
-not
-support
-string
-placeholders
-.
-Note
-:
-The
-word
-"
-Firefox
-"
-should
-NOT
-be
-translated
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_sign_in_description_2
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-.
-.
 <
 /
 string
@@ -6125,6 +5844,13 @@ name
 "
 juno_onboarding_enable_notifications_title_nimbus_2
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 <
 /
@@ -6173,6 +5899,13 @@ name
 =
 "
 juno_onboarding_enable_notifications_description_nimbus_2
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 .
@@ -6305,6 +6038,7 @@ tools
 ignore
 =
 "
+BrandUsage
 UnusedResources
 "
 >
@@ -6853,6 +6587,13 @@ name
 "
 preference_search_address_bar_fx_suggest
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 -
 <
@@ -6880,6 +6621,13 @@ name
 =
 "
 preference_search_learn_about_fx_suggest
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 <
@@ -7057,6 +6805,44 @@ name
 =
 "
 preferences_site_permissions
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+advanced
+site
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_site_settings
 "
 >
 <
@@ -8551,47 +8337,6 @@ name
 =
 "
 preferences_category_account
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-changing
-where
-the
-toolbar
-is
-positioned
--
--
->
-<
-string
-name
-=
-"
-preferences_toolbar
-"
-moz
-:
-removedIn
-=
-"
-129
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -10850,6 +10595,7 @@ tools
 ignore
 =
 "
+BrandUsage
 UnusedResources
 "
 >
@@ -11680,6 +11426,13 @@ name
 =
 "
 fxa_received_tab_channel_description
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 .
@@ -12522,49 +12275,6 @@ name
 =
 "
 preference_gestures_dynamic_toolbar
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-switching
-tabs
-by
-swiping
-horizontally
-on
-the
-toolbar
--
--
->
-<
-string
-name
-=
-"
-preference_gestures_swipe_toolbar_switch_tabs
-"
-moz
-:
-removedIn
-=
-"
-129
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -15272,49 +14982,6 @@ the
 menu
 button
 to
-rename
-a
-top
-site
--
--
->
-<
-string
-name
-=
-"
-rename_top_site
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-menu
-button
-to
 remove
 a
 top
@@ -16119,6 +15786,34 @@ string
 !
 -
 -
+Unsubmitted
+crash
+dialog
+negative
+button
+to
+dismiss
+the
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_negative_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmarks
 -
 -
@@ -16283,6 +15978,20 @@ name
 "
 bookmark_saved_snackbar
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 !
 <
@@ -16313,6 +16022,29 @@ name
 =
 "
 edit_bookmark_snackbar_action
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
+menu
+move
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_menu_move_button
 "
 >
 <
@@ -16738,6 +16470,37 @@ string
 !
 -
 -
+Label
+for
+a
+text
+input
+field
+for
+a
+bookmark
+or
+folder
+name
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_name_label_normal_case
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmark
 add
 folder
@@ -16991,6 +16754,45 @@ string
 !
 -
 -
+Bookmark
+snackbar
+message
+for
+deleting
+a
+single
+item
+.
+Parameter
+is
+the
+title
+of
+the
+item
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_single_item
+"
+>
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -17051,34 +16853,6 @@ string
 Content
 description
 for
-the
-bookmark
-navigation
-bar
-close
-button
--
--
->
-<
-string
-name
-=
-"
-bookmark_close_button_content_description
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
 bookmark
 search
 floating
@@ -17093,6 +16867,37 @@ name
 =
 "
 bookmark_search_button_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+add
+new
+folder
+button
+when
+selecting
+a
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_select_folder_new_folder_button_title
 "
 >
 <
@@ -18316,6 +18121,78 @@ name
 =
 "
 studies_off
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_permissions
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+content
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_content
 "
 >
 <
@@ -19668,6 +19545,13 @@ name
 "
 sync_connect_device_dialog
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 .
 <
@@ -20023,6 +19907,7 @@ tools
 ignore
 =
 "
+BrandUsage
 UnusedResources
 "
 >
@@ -20082,6 +19967,7 @@ tools
 ignore
 =
 "
+BrandUsage
 UnusedResources
 "
 >
@@ -20387,6 +20273,13 @@ name
 "
 nimbus_survey_message_text
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 .
 <
@@ -20590,6 +20483,20 @@ name
 =
 "
 snackbar_message_bookmarks_saved
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 !
@@ -21030,51 +20937,6 @@ name
 =
 "
 tab_collection_dialog_positive
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -21793,51 +21655,6 @@ string
 name
 =
 "
-delete_history_prompt_body
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-(
-)
-.
-<
-/
-string
->
-<
-!
--
--
-Body
-text
-of
-a
-delete
-browsing
-data
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
 delete_history_prompt_body_2
 "
 >
@@ -22471,6 +22288,13 @@ name
 "
 sign_in_instructions
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 <
 !
@@ -22615,6 +22439,13 @@ name
 =
 "
 sign_in_create_account_text
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 <
@@ -23584,49 +23415,6 @@ string
 !
 -
 -
-Preference
-for
-enhanced
-tracking
-protection
-for
-the
-custom
-protection
-settings
--
--
->
-<
-string
-name
-=
-"
-preference_enhanced_tracking_protection_custom_fingerprinters
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Button
 label
 for
@@ -23956,98 +23744,6 @@ name
 =
 "
 etp_cryptominers_description
-"
->
-.
-<
-/
-string
->
-<
-!
--
--
-Category
-of
-trackers
-(
-fingerprinters
-)
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_title
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Description
-of
-fingerprinters
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_description
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 .
@@ -30053,6 +29749,13 @@ name
 "
 synced_tabs_no_tabs
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 .
 <
@@ -30439,50 +30142,6 @@ string
 !
 -
 -
-Button
-caption
-to
-confirm
-the
-renaming
-of
-the
-top
-site
-.
--
--
->
-<
-string
-name
-=
-"
-top_sites_rename_dialog_ok
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Dialog
 button
 text
@@ -30609,6 +30268,101 @@ name
 top_sites_sponsored_label
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+menu
+item
+to
+edit
+a
+top
+site
+.
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_top_site
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+caption
+to
+confirm
+the
+edit
+of
+the
+top
+site
+.
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_dialog_save
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+URL
+edit
+field
+in
+the
+edit
+top
+site
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_dialog_url_title
+"
+>
+.
+.
+.
 <
 /
 string
@@ -30854,6 +30608,7 @@ tools
 ignore
 =
 "
+BrandUsage
 UnusedResources
 "
 >
@@ -30975,6 +30730,13 @@ name
 =
 "
 firefox_suggest_header
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 <
@@ -31110,6 +30872,13 @@ name
 "
 default_browser_experiment_card_text
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 -
 .
@@ -31197,20 +30966,6 @@ name
 =
 "
 action_bar_up_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -31431,6 +31186,13 @@ name
 =
 "
 pocket_stories_feature_caption
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 .
@@ -32769,6 +32531,42 @@ that
 links
 to
 Fakespot
+privacy
+notice
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_contextual_onboarding_privacy_policy_3
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Clickable
+text
+from
+the
+review
+quality
+check
+contextual
+onboarding
+card
+that
+links
+to
+Fakespot
 terms
 of
 use
@@ -32882,6 +32680,20 @@ name
 "
 review_quality_check_first_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 .
 <
@@ -32921,6 +32733,13 @@ name
 =
 "
 review_quality_check_first_cfr_action
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 tools
 :
@@ -32968,51 +32787,12 @@ name
 "
 review_quality_check_second_cfr_action
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Flag
-showing
-that
-the
-review
-quality
-check
-feature
-is
-work
-in
-progress
-.
--
--
->
-<
-string
-name
-=
-"
-review_quality_check_beta_flag
-"
 moz
 :
 removedIn
 =
 "
-130
+132
 "
 tools
 :
@@ -33022,7 +32802,6 @@ ignore
 UnusedResources
 "
 >
-Beta
 <
 /
 string
@@ -34645,59 +34424,6 @@ string
 !
 -
 -
-Download
-languages
-preference
-screen
--
--
->
-<
-!
--
--
-Title
-of
-the
-download
-languages
-preference
-screen
-toolbar
-.
--
--
->
-<
-string
-name
-=
-"
-download_languages_toolbar_title_preference
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Clickable
 text
 from
@@ -36095,80 +35821,7 @@ string
 name
 =
 "
-micro_survey_survey_header
-"
-moz
-:
-removedIn
-=
-"
-129
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-survey
-header
--
--
->
-<
-string
-name
-=
-"
 micro_survey_survey_header_2
-"
->
-<
-/
-string
->
-<
-!
--
--
-The
-privacy
-notice
-link
--
--
->
-<
-string
-name
-=
-"
-micro_survey_privacy_notice
-"
-moz
-:
-removedIn
-=
-"
-129
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -36319,6 +35972,13 @@ name
 "
 microsurvey_app_icon_content_description
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 <
 /
@@ -36345,56 +36005,6 @@ name
 =
 "
 microsurvey_feature_icon_content_description
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-(
-not
-visible
-for
-screen
-readers
-etc
-.
-)
-for
-opening
-microsurvey
-bottom
-sheet
-.
--
--
->
-<
-string
-name
-=
-"
-microsurvey_open_handle_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
-moz
-:
-removedIn
-=
-"
-130
 "
 >
 <
@@ -36743,6 +36353,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -36775,6 +36399,20 @@ name
 =
 "
 exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
