--- a/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
@@ -286,6 +286,46 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+Zasebno
+brskanje
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -3729,6 +3769,47 @@ Za
 asno
 onemogo
 eno
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
+"
+>
+Ni
+omogo
+enih
+raz
+iritev
 <
 /
 string
