--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-hu/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-hu/strings.xml
@@ -3458,9 +3458,63 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Nincs
 internetkapcsolat
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_title_2
+"
+>
+gy
+n
+z
+ki
+hogy
+probl
+ma
+van
+az
+internetkapcsolat
+val
 <
 /
 string
@@ -3495,6 +3549,20 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ellen
 rizze
@@ -3519,6 +3587,108 @@ pillanat
 m
 lva
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Pr
+b
+ljon
+meg
+csatlakozni
+egy
+m
+sik
+eszk
+zr
+l
+.
+Ellen
+rizze
+a
+modemet
+vagy
+tv
+laszt
+t
+.
+Bontsa
+a
+kapcsolatot
+majd
+csatlakozzon
+jra
+a
+Wi
+-
+Fi
+-
+hez
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+Hibak
+d
+:
+NS_ERROR_OFFLINE
 <
 /
 string
